fix 2048 game width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -422,9 +422,8 @@ html {
     #game_2048Container {
         padding: 0;
         margin: 0;
-        width: 310px;
-        height: 400px;
         text-align: center;
+        height: 400px;
     }
     #gameContainer {
         padding: 0;
